# vibeterm

./: README.md  index.html  package-lock.json  package.json  vibe-terminal-spec.md  vite.config.ts
scripts/: dev-remote.mjs  run-mode.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  companions.rs  launchers.rs  lib.rs  main.rs  pty_manager.rs  session.rs  session_registry.rs
src/components/: AppSplash.tsx  CompanionPanel.tsx  EmptyPane.tsx  GridContainer.tsx  SessionLauncherPanel.tsx  SettingsPanel.tsx  StatusBar.tsx  TaskLabel.tsx  TerminalPane.tsx  Tooltip.tsx  TopBar.tsx  WorkspaceShell.tsx
src/hooks/: useTerminal.ts
src/lib/: companion.ts  grid.ts  layouts.ts  tauri.ts  themes.ts
src/store/: index.ts
src/styles/: globals.css
