[package]
name = "vibeterm"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "vibeterm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vibeterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
axum = { version = "0.8", features = ["ws", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
futures-util = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
